train process working

--- a/notebooks/dataset_analisys.ipynb
+++ b/notebooks/dataset_analisys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Dataset('../dataset')"
+    "train_dataset = Dataset('../dataset/train/samples')\n",
+    "test_dataset = Dataset('../dataset/test/samples')"
    ]
   },
   {
@@ -56,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = list(dataset.samples())"
+    "train_samples = list(train_dataset.samples())\n",
+    "test_samples = list(test_dataset.samples())"
    ]
   },
   {
@@ -72,18 +74,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "274"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 274\n",
+      "Test: 55\n"
+     ]
     }
    ],
    "source": [
-    "len(samples)"
+    "print(f'Train: {len(train_samples)}')\n",
+    "print(f'Test: {len(test_samples)}')"
    ]
   },
   {
@@ -102,7 +103,8 @@
    "outputs": [],
    "source": [
     "expected_classes = set(cfg.property('classes'))\n",
-    "dataset_classes = dataset.classes()"
+    "train_dataset_classes = train_dataset.classes()\n",
+    "test_dataset_classes = test_dataset.classes()"
    ]
   },
   {
@@ -129,16 +131,85 @@
     }
    ],
    "source": [
-    "len(dataset_classes), len(expected_classes)"
+    "len(train_dataset_classes), len(expected_classes)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55, 55)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_dataset_classes), len(expected_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "assert dataset_classes == expected_classes, \"Wrong dataset classes!\""
+    "assert train_dataset_classes == expected_classes, \"Wrong train dataset classes!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert test_dataset_classes == expected_classes, \"Wrong test dataset classes!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_dataset_classes - expected_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_classes - test_dataset_classes"
    ]
   },
   {
@@ -150,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +242,7 @@
     }
    ],
    "source": [
-    "plot_samples_count_by_class(dataset)"
+    "plot_samples_count_by_class(train_dataset)"
    ]
   },
   {
@@ -183,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -195,12 +266,12 @@
     }
    ],
    "source": [
-    "plot_missing_samples_by_class(dataset)"
+    "plot_missing_samples_by_class(train_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -623,13 +694,13 @@
        "54      7_of_diamons        0     14"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "missing_samples_count_by_class(dataset)"
+    "missing_samples_count_by_class(train_dataset)"
    ]
   },
   {
